More tests update to use new CLI options